# temporal-bedtime-agent

./: .dockerignore  .env-sample  .gitignore  CLAUDE.md  Dockerfile.webui  Dockerfile.worker  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.cmux/: post-create.sh
agent/: __init__.py  __main__.py  config.py  conversation.py  prompt.py
static/: app.js  index.html  style.css
tests/: test_message_history.py
webui/: __init__.py  __main__.py  config.py  models.py
worker/: __init__.py  __main__.py  activities.py  agent.py  config.py  durable_agent.py  illustration_generation_workflow.py  models.py  story_session_workflow.py  workflow_illustration_generation.py  workflow_story_session.py
