[project]
name = "temporal-bedtime-agent"
version = "0.1.0"
description = "An interactive bedtime story creation agent powered by Temporal durable execution and Anthropic LLM"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-ai>=1.71.0",
    "openai>=1.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
worker = "worker:run"
webui = "webui:run"

[tool.hatch.build.targets.wheel]
packages = [
    "worker",
    "webui",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
